added a working slider

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Etch-a-sketch</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
@@ -11,5 +11,13 @@
     </head>
     <body>
         <div class="title">Etch-a-sketch</div>
+        <div class="bodys">
+            <div class="left">
+                <div class="slide-container">
+                    <p class="output">16x16</p>
+                    <input type="range" min="4" max="100" value="16" class="slider">
+                </div>
+            </div>
+        </div>
     </body>
 </html>
